# wellbeing_machine_learning

./: .pre-commit-config.yaml  CHANGES.md  CITATION  README.md  environment.yml  pyproject.toml  setup.cfg
.github/ISSUE_TEMPLATE/: bug_report.md  documentation.md  enhancement.md  question.md
paper/: task_paper.py  wellbeing_and_machine_learning.tex  wellbeing_and_machine_learning_pres.tex
src/wellbeing_and_machine_learning/: __init__.py  config.py
src/wellbeing_and_machine_learning/analysis/: algorithms.py  task_algorithms.py  task_analysis.py
src/wellbeing_and_machine_learning/data/: __init__.py
src/wellbeing_and_machine_learning/data_management/: __init__.py  clean_data.py  help.ipynb  merge_data.py  task_clean_data.py  task_data_management.py  task_merge.py  task_unzip.py
src/wellbeing_and_machine_learning/final/: __init__.py  descriptive_stats.py  plot.py  task_final.py
tests/analysis/: test_algorithms.py  test_model.py  test_predict.py
tests/data_management/: test_clean_data.py  test_merge_data.py
