[metadata]
name = wellbeing_and_machine_learning
description = Comparative Analysis of Predictive Models on Human Wellbeing
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/willbackes/wellbeing_and_machine_learning
author = William Backes
author_email = s19wback@uni-bonn.de
license = Not open source
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Intended Audience :: Science/Research
    License :: OSI Approved :: Not open source License
    Operating System :: MacOS :: MacOS X
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
project_urls =
    Changelog = https://github.com/willbackes/wellbeing_and_machine_learning
    Documentation = https://github.com/willbackes/wellbeing_and_machine_learning
    Github = https://github.com/willbackes/wellbeing_and_machine_learning
    Tracker = https://github.com/willbackes/wellbeing_and_machine_learning/issues

[options]
packages = find:
install_requires =
    pytask
python_requires = >=3.11
include_package_data = True
package_dir =
    =src
zip_safe = False

[options.packages.find]
where = src

[check-manifest]
ignore =
    src/wellbeing_and_machine_learning/_version.py
